Perma Windows AArch browser/components/places/tests/browser/browser_sidebarpanels_click.js | application crashed [@ mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush)]
Categories
(Core :: Layout, defect, P2)
Tracking
()
| Tracking | Status | |
|---|---|---|
| firefox-esr60 | --- | unaffected |
| firefox-esr68 | --- | unaffected |
| firefox67 | --- | unaffected |
| firefox68 | --- | unaffected |
| firefox69 | --- | unaffected |
| firefox70 | --- | unaffected |
| firefox71 | --- | fixed |
People
(Reporter: intermittent-bug-filer, Assigned: eeejay)
References
(Regression)
Details
(Keywords: crash, intermittent-failure, regression)
Crash Data
Attachments
(1 file)
Filed by: malexandru [at] mozilla.com
Parsed log: https://treeherder.mozilla.org/logviewer.html#?job_id=267435784&repo=mozilla-central
Full log: https://queue.taskcluster.net/v1/task/Ldc0xIx5Te-NixBDCbFoiA/runs/0/artifacts/public/logs/live_backing.log
15:25:13 INFO - TEST-START | browser/components/places/tests/browser/browser_sidebarpanels_click.js
15:25:14 INFO - GECKO(5792) | Exiting due to channel error.
15:25:14 INFO - GECKO(5792) | Exiting due to channel error.
15:25:14 INFO - GECKO(5792) | Exiting due to channel error.
15:25:15 INFO - TEST-INFO | Main app process: exit 1
15:25:15 INFO - Buffered messages logged at 15:25:13
15:25:15 INFO - Entering test bound test_sidebarpanels_click
15:25:15 INFO - Running Bookmarks sidebar test in LTR mode
15:25:15 INFO - alert dialog observed as expected
15:25:15 INFO - Console message: [JavaScript Error: "The character encoding of the HTML document was not declared. The document will render with garbled text in some browser configurations if the document contains characters from outside the US-ASCII range. The character encoding of the page must be declared in the document or in the transfer protocol." {file: "http://mochi.test:8888/browser/browser/components/places/tests/browser/sidebarpanels_click_test_page.html" line: 0}]
15:25:15 INFO - Running Bookmarks sidebar test in RTL mode
15:25:15 INFO - Buffered messages finished
15:25:15 ERROR - TEST-UNEXPECTED-FAIL | browser/components/places/tests/browser/browser_sidebarpanels_click.js | application terminated with exit code 1
15:25:15 INFO - runtests.py | Application ran for: 0:01:37.498000
15:25:15 INFO - zombiecheck | Reading PID log: c:\users\bitbar\appdata\local\temp\tmpvabmgppidlog
15:25:15 INFO - ==> process 5284 launched child process 9948 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.0.1016986947\1791941288" -parentBuildID 20190919094654 -prefsHandle 1884 -prefMapHandle 1876 -prefsLen 1 -prefMapSize 218633 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 1948 gpu)
15:25:15 INFO - ==> process 5284 launched child process 11004 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.6.789030611\485963993" -childID 1 -isForBrowser -prefsHandle 1432 -prefMapHandle 1428 -prefsLen 2037 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 2876 tab)
15:25:15 INFO - ==> process 5284 launched child process 10728 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.13.385837176\489020841" -childID 2 -isForBrowser -prefsHandle 3036 -prefMapHandle 3044 -prefsLen 2168 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 3076 tab)
15:25:15 INFO - ==> process 5284 launched child process 11688 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.20.454762184\1635321006" -childID 3 -isForBrowser -prefsHandle 3300 -prefMapHandle 3296 -prefsLen 2229 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 3328 tab)
15:25:15 INFO - ==> process 5284 launched child process 11444 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.27.815438433\1926629634" -childID 4 -isForBrowser -prefsHandle 4200 -prefMapHandle 4308 -prefsLen 11046 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 4332 tab)
15:25:15 INFO - ==> process 5284 launched child process 9844 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.34.277914083\952521079" -childID 5 -isForBrowser -prefsHandle 4664 -prefMapHandle 4624 -prefsLen 11046 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 4768 tab)
15:25:15 INFO - ==> process 5284 launched child process 3576 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.41.344998019\1876438293" -childID 6 -isForBrowser -prefsHandle 4920 -prefMapHandle 4912 -prefsLen 11046 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 4952 tab)
15:25:15 INFO - ==> process 5284 launched child process 11320 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.48.1691052800\1192561797" -childID 7 -isForBrowser -prefsHandle 5208 -prefMapHandle 5192 -prefsLen 11046 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 4968 tab)
15:25:15 INFO - ==> process 5284 launched child process 9984 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.55.1177597820\730973521" -childID 8 -isForBrowser -prefsHandle 5388 -prefMapHandle 5384 -prefsLen 11111 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 5412 tab)
15:25:15 INFO - ==> process 5284 launched child process 11580 ("C:\tasks\task_1568904670\build\application\firefox\firefox.exe" -contentproc --channel="5284.62.697122860\1578390946" -childID 9 -isForBrowser -prefsHandle 5636 -prefMapHandle 5632 -prefsLen 11111 -prefMapSize 218633 -parentBuildID 20190919094654 -greomni "C:\tasks\task_1568904670\build\application\firefox\omni.ja" -appomni "C:\tasks\task_1568904670\build\application\firefox\browser\omni.ja" -appdir "C:\tasks\task_1568904670\build\application\firefox\browser" - 5284 "\.\pipe\gecko-crash-server-pipe.5284" 5648 tab)
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 9984
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 10728
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 9948
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 11688
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 11444
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 11320
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 3576
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 9844
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 11004
15:25:15 INFO - zombiecheck | Checking for orphan process with PID: 11580
15:25:15 INFO - mozcrash Downloading symbols from: https://queue.taskcluster.net/v1/task/BjViL-yJS8KrI2AVctSrrw/artifacts/public/build/target.crashreporter-symbols.zip
15:25:18 INFO - mozcrash Copy/paste: C:\tasks\task_1568904670\build\win32-minidump_stackwalk.exe c:\users\bitbar\appdata\local\temp\tmphkudzx.mozrunner\minidumps\f7d92591-c7fc-4704-a491-0234cfc9cfdf.dmp c:\users\bitbar\appdata\local\temp\tmp3pi3ju
15:25:32 INFO - mozcrash Saved minidump as C:\tasks\task_1568904670\build\blobber_upload_dir\f7d92591-c7fc-4704-a491-0234cfc9cfdf.dmp
15:25:32 INFO - mozcrash Saved app info as C:\tasks\task_1568904670\build\blobber_upload_dir\f7d92591-c7fc-4704-a491-0234cfc9cfdf.extra
15:25:32 INFO - PROCESS-CRASH | browser/components/places/tests/browser/browser_sidebarpanels_click.js | application crashed [@ mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush)]
15:25:32 INFO - Crash dump filename: c:\users\bitbar\appdata\local\temp\tmphkudzx.mozrunner\minidumps\f7d92591-c7fc-4704-a491-0234cfc9cfdf.dmp
15:25:32 INFO - Operating system: Windows NT
15:25:32 INFO - 10.0.17134
15:25:32 INFO - CPU: 0x000c
15:25:32 INFO - 8 CPUs
15:25:32 INFO -
15:25:32 INFO - GPU: UNKNOWN
15:25:32 INFO -
15:25:32 INFO - Crash reason: EXCEPTION_ILLEGAL_INSTRUCTION
15:25:32 INFO - Crash address: 0x7fffccc4e2d4
15:25:32 INFO - Process uptime: 97 seconds
15:25:32 INFO -
15:25:32 INFO - Thread 0 (crashed)
15:25:32 INFO - 0 xul.dll!mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) [PresShell.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 3963 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: given as instruction pointer in context
15:25:32 INFO - 1 xul.dll!mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush) [Document.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 10072 + 0x4]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 2 xul.dll!mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush) [Document.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 10072 + 0x4]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 3 xul.dll!mozilla::dom::XULTreeElement::GetTreeBodyFrame(mozilla::FlushType) [XULTreeElement.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 104 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 4 xul.dll!mozilla::dom::XULTreeElement::GetColumns() [XULTreeElement.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 182 + 0x4]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 5 xul.dll!nsCoreUtils::GetFirstSensibleColumn(mozilla::dom::XULTreeElement *) [nsCoreUtils.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 439 + 0xc]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 6 xul.dll!void mozilla::a11y::XULTreeItemAccessible::XULTreeItemAccessible(class nsIContent *, class mozilla::a11y::DocAccessible *, class mozilla::a11y::Accessible *, class mozilla::dom::XULTreeElement *, class nsITreeView *, int) [XULTreeAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 911 + 0x4]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 7 xul.dll!struct already_AddRefed<mozilla::a11y::Accessible> mozilla::a11y::XULTreeAccessible::CreateTreeItemAccessible(int) [XULTreeAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 574 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 8 xul.dll!mozilla::a11y::XULTreeAccessible::GetTreeItemAccessible(int) [XULTreeAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 444 + 0x14]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 9 xul.dll!mozilla::a11y::DocAccessible::GetAccessibleOrDescendant(nsINode *) [DocAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1217 + 0x10]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 10 xul.dll!bool mozilla::a11y::DocAccessible::PruneOrInsertSubtree(class nsIContent *) [DocAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1400 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 11 xul.dll!bool mozilla::a11y::DocAccessible::PruneOrInsertSubtree(class nsIContent *) [DocAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1419 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 12 xul.dll!bool mozilla::a11y::DocAccessible::PruneOrInsertSubtree(class nsIContent *) [DocAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1419 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 13 xul.dll!mozilla::a11y::DocAccessible::ContentInserted(nsIContent *,nsIContent *) [DocAccessible.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1309 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 14 xul.dll!nsCSSFrameConstructor::ContentRangeInserted(nsIContent *,nsIContent *,nsILayoutHistoryState *,nsCSSFrameConstructor::InsertionKind) [nsCSSFrameConstructor.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 7100 + 0xc]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 15 xul.dll!void mozilla::RestyleManager::DoProcessPendingRestyles(mozilla::ServoTraversalFlags) [RestyleManager.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 3113 + 0x12cc]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 16 xul.dll!mozilla::PresShell::DoFlushPendingNotifications(mozilla::ChangesToFlush) [PresShell.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 4108 + 0xc]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 17 xul.dll!mozilla::dom::Document::FlushPendingNotifications(mozilla::ChangesToFlush) [Document.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 10072 + 0x4]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 18 xul.dll!nsIContent::GetPrimaryFrame(mozilla::FlushType) [Element.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 233 + 0x14]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 19 xul.dll!mozilla::dom::Element::GetBoundingClientRect() [Element.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1013 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 20 xul.dll!static bool mozilla::dom::Element_Binding::getBoundingClientRect(struct JSContext *, class JS::Handle<JSObject *>, class mozilla::dom::Element *, const class JSJitMethodCallArgs & const) [ElementBinding.cpp: : 3015 + 0x8]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 21 xul.dll!mozilla::dom::binding_detail::GenericMethod<mozilla::dom::binding_detail::NormalThisPolicy,mozilla::dom::binding_detail::ThrowExceptions>(JSContext *,unsigned int,JS::Value *) [BindingUtils.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 3168 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 22 0x5df8e74c20
15:25:32 INFO -
15:25:32 INFO - Found by: previous frame's frame pointer
15:25:32 INFO - 23 xul.dll!js::LiveSavedFrameCache::~LiveSavedFrameCache() [Stack.h:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 1328 + 0x30]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 24 xul.dll!static bool mozilla::dom::EventTarget_Binding::get_ownerGlobal(struct JSContext *, class JS::Handle<JSObject *>, class mozilla::dom::EventTarget *, class JSJitGetterCallArgs) [EventTargetBinding.cpp: : 1207 + 0xc]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 25 xul.dll!mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::MaybeGlobalThisPolicy,mozilla::dom::binding_detail::ThrowExceptions>(JSContext *,unsigned int,JS::Value *) [BindingUtils.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 3064 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 26 xul.dll!mozilla::dom::binding_detail::GenericGetter<mozilla::dom::binding_detail::NormalThisPolicy,mozilla::dom::binding_detail::ConvertExceptionsToPromises>(JSContext *,unsigned int,JS::Value *) [BindingUtils.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 0 + 0x9c]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 27 xul.dll!js::InternalCallOrConstruct(JSContext *,JS::CallArgs const &,js::MaybeConstruct,js::CallReason) [Interpreter.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 551 + 0x19c]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 28 xul.dll!class mozilla::detail::HashTable<mozilla::HashMapEntry<js::ObjectGroupRealm::AllocationSiteKey,js::WeakHeapPtr<js::ObjectGroup *> >,mozilla::HashMap<js::ObjectGroupRealm::AllocationSiteKey,js::WeakHeapPtr<js::ObjectGroup *>,js::MovableCellHasher<ObjectGroupRealm::AllocationSiteKey>,js::SystemAllocPolicy>::MapHashPolicy,js::SystemAllocPolicy>::AddPtr JS::WeakCache<JS::GCHashMap<js::ObjectGroupRealm::AllocationSiteKey,js::WeakHeapPtr<js::ObjectGroup *>,js::MovableCellHasher<ObjectGroupRealm::AllocationSiteKey>,js::SystemAllocPolicy,JS::DefaultMapSweepPolicy<js::ObjectGroupRealm::AllocationSiteKey,js::WeakHeapPtr<js::ObjectGroup *> > > >::lookupForAdd(const struct js::ObjectGroupRealm::AllocationSiteKey & const) [GCHashTable.h:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 453 + 0xdc]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 29 xul.dll!js::CallGetter(JSContext *,JS::Handle<JS::Value>,JS::Handle<JS::Value>,JS::MutableHandle<JS::Value>) [Interpreter.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 761 + 0x68]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 30 xul.dll!js::NativeGetProperty(JSContext *,JS::Handle<js::NativeObject *>,JS::Handle<JS::Value>,JS::Handle<JS::PropertyKey>,JS::MutableHandle<JS::Value>) [NativeObject.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 2619 + 0x148]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 31 xul.dll + 0x3e9e04c
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 32 xul.dll!tan + 0x111d0a0
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 33 xul.dll!js::GetProperty(JSContext *,JS::Handle<JS::Value>,JS::Handle<js::PropertyName *>,JS::MutableHandle<JS::Value>) [Interpreter.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 4542 + 0x28]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 34 xul.dll!js::NewObjectOperation(JSContext *,JS::Handle<JSScript *>,unsigned char *,js::NewObjectKind) [Interpreter.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 5221 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 35 xul.dll!tan + 0x111d0a0
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO - 36 xul.dll!static bool Interpret(struct JSContext *, class js::RunState & const) [Interpreter.cpp:6b93a83735ed3ab3b57b46c1b768814b1a1af5d6 : 3160 + 0x0]
15:25:32 INFO -
15:25:32 INFO - Found by: stack scanning
15:25:32 INFO -
15:25:32 INFO - Thread 1
Comment 1•6 years ago
|
||
Hsin-yi, this seems to have started since this central push: https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&fromchange=3d02a4c69a81b5e64cb05b053975d3555443ec3c&searchStr=windows%2C10%2Caarch64%2Copt%2Cmochitests%2Ctest-windows10-aarch64%2Fopt-mochitest-browser-chrome-e10s-3%2Cm%28bc3%29&tochange=6b93a83735ed3ab3b57b46c1b768814b1a1af5d6&selectedJob=267435784
Could you please take a look at it?
| Comment hidden (Intermittent Failures Robot) |
Comment 3•6 years ago
•
|
||
(In reply to Alexandru Michis [:malexandru] from comment #1)
Hsin-yi, this seems to have started since this central push: https://treeherder.mozilla.org/#/jobs?repo=mozilla-central&fromchange=3d02a4c69a81b5e64cb05b053975d3555443ec3c&searchStr=windows%2C10%2Caarch64%2Copt%2Cmochitests%2Ctest-windows10-aarch64%2Fopt-mochitest-browser-chrome-e10s-3%2Cm%28bc3%29&tochange=6b93a83735ed3ab3b57b46c1b768814b1a1af5d6&selectedJob=267435784
Could you please take a look at it?
My wild guess is Bug 1559841 ? Jonathan, do you think it's related?
Comment 4•6 years ago
|
||
I don't think so. That code should only affect Fission, and the reported failure is for a non-Fission test run. There are a few bits of the patch that touch non-Fission, but looking again at those the non-Fission code paths should remain unchanged.
Updated•6 years ago
|
Comment 6•6 years ago
|
||
(In reply to Andreea Pavel [:apavel] from comment #5)
Hi Martin, can this be from bug 1580152 ?
No, mozilla tests do not run on Wayland.
Comment 7•6 years ago
|
||
This is a regression from bug 1580292: https://treeherder.mozilla.org/#/jobs?repo=autoland&searchStr=windows%2Caarch64%2Copt%2Cbrowser-chrome&tochange=e71921b729c6c61c9f2c7b6b84cf0db58543d28f&fromchange=c0db7327fb12f37b793ea273167ffd7d69cc4f7d&selectedJob=268542492
| Assignee | ||
Updated•6 years ago
|
| Assignee | ||
Comment 8•6 years ago
•
|
||
It looks like XULTreeAccessible::GetChildAt indirectly flushes layout, which we shouldn't do because we are mid-flush. Three fix options:
- Change how
XULTreeAccessiblegets its row children. Maybe don't create them lazily? - Call
DocAccessible::PruneOrInsertSubtreeasynchronously after layout flush. - Change
GetAccessibleOrDescendantsomehow..
| Assignee | ||
Comment 9•6 years ago
|
||
| Comment hidden (Intermittent Failures Robot) |
Comment 11•6 years ago
|
||
Comment 12•6 years ago
|
||
| bugherder | ||
Updated•6 years ago
|
| Comment hidden (Intermittent Failures Robot) |
Updated•3 years ago
|
Description
•