Bug 1582561 - Don't access lazily created descendants in GetAccessibleOrDescendant. r=Jamie

Lazily creating children might cause us to make layout calls at unsafe times.

Differential Revision: https://phabricator.services.mozilla.com/D47361